<resources>
    <string name="app_name">成绩管理器</string>
    <string name="login_title">欢迎使用</string>
    <string name="register">注册</string>
    <string name="set_ip">调整服务器IP</string>
    <string name="url_hint">请输入服务器IP和端口号</string>
    <string name="mismatch_url">URL匹配错误</string>
    <string name="match_url">URL匹配成功</string>
    <string name="user_name">用户名：</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_again">请再次输入密码</string>
    <string name="password_double_check_fail">两次输入的密码不一致</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="student_login">学生</string>
    <string name="teacher_login">教师</string>
    <string name="administer_login">管理员</string>
    <string name="select_type">选择用户类型：</string>
    <string name="forget_password_notice">请联系管理员进行密码修改</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="no_user">用户不存在</string>
    <string name="user_name_exist">用户名已存在</string>
    <string name="wrong_password">密码错误</string>
    <string name="invalid_user">非法用户</string>
    <string name="login_success">登陆成功</string>
    <string name="success">成功</string>
    <string name="register_success">注册成功</string>
    <string name="fail">失败</string>
    <string name="none">没有符合条件的搜索结果</string>
    <string name="unknown_error">未知错误</string>
    <string name="unknown">未知</string>
    <string name="name">姓名：</string>
    <string name="gender">性别：</string>
    <string name="name_hint">请输入姓名</string>
    <string name="id">用户id：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="grade">年级：</string>
    <string name="major">专业：</string>
    <string name="classroom">班级：</string>
    <string name="grade_hint">请输入年级</string>
    <string name="major_hint">请输入专业</string>
    <string name="classroom_hint">请输入班级</string>
    <string name="birthday">生日：</string>
    <string name="enrollment_time">入学时间：</string>
    <string name="self_information">个人信息</string>
    <string name="edit_information">修改信息</string>
    <string name="select_course_info">查询选课信息</string>
    <string name="select_course">选课</string>
    <string name="selected_course">已选课程：</string>
    <string name="course_can_select">可选课程：</string>
    <string name="add_course">添加课程</string>
    <string name="course_repeat">课程重复</string>
    <string name="course_id">课程id：</string>
    <string name="course_name">课程名称：</string>
    <string name="course_teachers">课程教师：</string>
    <string name="course_credit">课程学分：</string>
    <string name="course_start_date">开始时间：</string>
    <string name="course_end_date">结束时间：</string>
    <string name="select_course_success">选课成功</string>
    <string name="select_course_fail">选课失败</string>
    <string name="remove_course_success">退选成功</string>
    <string name="remove_course_fail">退选失败</string>
    <string name="score">查询成绩</string>
    <string name="search_and_edit_score">查询&amp;修改成绩</string>
    <string name="search_hint">请输入课程id或课程名</string>
    <string name="teacher_search_hint">请输入学生id</string>
    <string name="enter_course_id">请输入课程id</string>
    <string name="user_id_hint">请输入用户id</string>
    <string name="course_score">成绩：</string>
    <string name="input_score">录入成绩</string>
    <string name="flush_in">写入数据库</string>
    <string name="average_score">查询平均成绩</string>
    <string name="my_teaching_avg">我任教课程的平均成绩：</string>
    <string name="score_hint">请输入成绩：</string>
    <string name="edit_score">修改成绩</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="modify_could_fail">（以下部分信息的修改可能无效）</string>
    <string name="modify_hint">请输入学生id、教师id或课程id</string>
    <string name="type_error">数据类型错误</string>
    <string name="individual">个人成绩</string>
    <string name="group">集体</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="teacher_id_format_hint">用半角逗号隔开</string>
    <string name="reset_password">重置密码</string>
    <string name="modify_password">修改密码</string>
    <string name="reset_password_hint">密码将会被重置回123456789</string>
</resources>