<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="25sp"
            android:id="@+id/register"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_ip"
            android:textSize="25sp"
            android:id="@+id/setIP"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="85dp"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/user"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/user_name_hint"
                android:layout_margin="3dp"
                android:id="@+id/userNameEditText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/password"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_margin="3dp"
            android:id="@+id/passwordEditText"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/userSelector"
        android:orientation="horizontal">

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_login"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:id="@+id/student"
        android:checked="true"
        android:layout_weight="0.33"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_login"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:id="@+id/teacher"
            android:layout_weight="0.33"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administer_login"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:id="@+id/administer"
            android:layout_weight="0.33"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="25sp"
            android:layout_weight="0.5"
            android:id="@+id/forgetPassword"
            android:layout_margin="3dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            android:layout_weight="0.5"
            android:id="@+id/login"
            android:layout_margin="3dp"/>
    </LinearLayout>
</LinearLayout>