<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/user_name"
            android:layout_gravity="center"
            android:layout_margin="3dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/user_name_hint"
            android:layout_weight="1"
            android:id="@+id/userNameEditText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/password"
            android:layout_gravity="center"
            android:layout_margin="3dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:id="@+id/passwordEditText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/password"
            android:layout_gravity="center"
            android:layout_margin="3dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:id="@+id/passwordEditTextAgain"/>
    </LinearLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/confirm"
        android:textSize="16sp"
        android:id="@+id/confirm"/>
</LinearLayout>