<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id_hint"
        android:maxLines="1"
        android:layout_margin="5dp"
        android:inputType="number"
        android:id="@+id/studentIdEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/unknown"
        android:id="@+id/studentName"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:id="@+id/scoreListView"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/flush_in"
        android:textSize="16sp"
        android:id="@+id/write"/>
</LinearLayout>